hw21/files/iptables
# Generated by iptables-save v1.4.7 on Sat Apr 27 12:42:00 2019
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [28:2176]
:OUTPUT ACCEPT [101:14210]
:SSH-INPUT - [0:0]
:SSH-INPUTTWO - [0:0]
:TRAFFIC - [0:0]
-A INPUT -j TRAFFIC 
-A SSH-INPUT -m recent --set --name SSH1 --rsource -j DROP 
-A SSH-INPUTTWO -m recent --set --name SSH2 --rsource -j DROP 
-A TRAFFIC -p icmp -m icmp --icmp-type any -j ACCEPT 
-A TRAFFIC -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A TRAFFIC -p tcp -m state --state NEW -m tcp --dport 22 -m recent --rcheck --seconds 30 --name SSH2 --rsource -j ACCEPT 
-A TRAFFIC -p tcp -m state --state NEW -m tcp -m recent --remove --name SSH2 --rsource -j DROP 
-A TRAFFIC -p tcp -m state --state NEW -m tcp --dport 9991 -m recent --rcheck --name SSH1 --rsource -j SSH-INPUTTWO 
-A TRAFFIC -p tcp -m state --state NEW -m tcp -m recent --remove --name SSH1 --rsource -j DROP 
-A TRAFFIC -p tcp -m state --state NEW -m tcp --dport 7777 -m recent --rcheck --name SSH0 --rsource -j SSH-INPUT 
-A TRAFFIC -p tcp -m state --state NEW -m tcp -m recent --remove --name SSH0 --rsource -j DROP 
-A TRAFFIC -p tcp -m state --state NEW -m tcp --dport 8881 -m recent --set --name SSH0 --rsource -j DROP 
-A TRAFFIC -j DROP 
COMMIT
# Completed on Sat Apr 27 12:42:00 2019
# Generated by iptables-save v1.4.7 on Sat Apr 27 12:42:00 2019
*nat
:PREROUTING ACCEPT [155:25359]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [19:1432]
-A POSTROUTING ! -d 192.168.0.0/16 -o eth0 -j MASQUERADE 
COMMIT
# Completed on Sat Apr 27 12:42:00 2019
